--- a/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
@@ -3,14 +3,14 @@
   <grid id="27dc6" binding="JoinGamePanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="929" height="400"/>
+      <xy x="20" y="20" width="984" height="400"/>
     </constraints>
     <properties>
       <opaque value="true"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="ada78" binding="JPanel1" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ada78" binding="JPanel1" layout-manager="GridLayoutManager" row-count="3" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -22,7 +22,7 @@
         <children>
           <component id="97143" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="7" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-1"/>
@@ -40,7 +40,7 @@
           </component>
           <component id="f32ba" class="javax.swing.JLabel" binding="slot1Label" custom-create="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="2" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value=""/>
@@ -48,7 +48,7 @@
           </component>
           <component id="86f15" class="javax.swing.JButton" binding="joinButton2">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
+              <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16777216"/>
@@ -66,7 +66,7 @@
           </component>
           <component id="25921" class="javax.swing.JLabel" binding="slot2Label" custom-create="true">
             <constraints>
-              <grid row="2" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="2" use-parent-layout="false">
+              <grid row="2" column="4" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="2" use-parent-layout="false">
                 <preferred-size width="145" height="17"/>
               </grid>
             </constraints>
@@ -74,9 +74,9 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="a7d4d" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="a7d4d" class="javax.swing.JComboBox" binding="comboBox2">
             <constraints>
-              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="10" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16383998"/>
@@ -96,6 +96,12 @@
               <foreground color="-1"/>
               <text value="Unirse"/>
             </properties>
+          </component>
+          <component id="4070" class="javax.swing.JComboBox" binding="comboBox1">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="10" fill="1" indent="1" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
