--- a/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/JoinGame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="JoinGamePanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1421" height="400"/>
+      <xy x="20" y="20" width="1441" height="400"/>
     </constraints>
     <properties>
       <opaque value="true"/>
@@ -31,7 +31,7 @@
           </component>
           <component id="1da0f" class="javax.swing.JLabel" binding="player1Label">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-1"/>
@@ -111,6 +111,10 @@
               <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <alignmentX value="0.0"/>
+              <alignmentY value="0.5"/>
+              <background color="-1"/>
+              <foreground color="-1"/>
               <text value="Jugador 2"/>
             </properties>
           </component>
@@ -216,7 +220,7 @@
           </component>
           <component id="7cd21" class="javax.swing.JLabel" binding="player3Label">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="3" use-parent-layout="false"/>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="5" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground color="-1"/>
