--- a/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/GameHistory.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="17066" class="javax.swing.JButton" binding="iniciarPartidaUnirseAButton" default-binding="true">
+      <component id="17066" class="javax.swing.JButton" binding="startJoinGameButton">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -21,7 +21,7 @@
           <text value="Iniciar Partida / Unirse a Partida"/>
         </properties>
       </component>
-      <component id="d08ea" class="javax.swing.JButton" binding="volverAlMenúPrincipalButton" default-binding="true">
+      <component id="d08ea" class="javax.swing.JButton" binding="returnMainMenuButton">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
