--- a/Medac-stars/src/main/java/medac/stars/ui/StartGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/StartGame.form
@@ -70,7 +70,7 @@
           <verifyInputWhenFocusTarget value="false"/>
         </properties>
       </component>
-      <component id="ff69" class="javax.swing.JButton" binding="iniciarButton" default-binding="true">
+      <component id="ff69" class="javax.swing.JButton" binding="startButton">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
