--- a/Medac-stars/src/main/java/medac/stars/ui/StartGame.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/StartGame.form
@@ -54,7 +54,7 @@
           <verifyInputWhenFocusTarget value="false"/>
         </properties>
       </component>
-      <component id="dbc85" class="javax.swing.JButton" binding="cancelarButton" default-binding="true">
+      <component id="dbc85" class="javax.swing.JButton" binding="cancelButton">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="3" use-parent-layout="false"/>
         </constraints>
