--- a/Medac-stars/src/main/java/medac/stars/ui/chat/ChatInterfaz.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/chat/ChatInterfaz.form
@@ -158,6 +158,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="jButton6"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bSalirAlMen&#xfa;ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
 
