--- a/Medac-stars/src/main/java/medac/stars/ui/chat/ChatJugadores.form
+++ b/Medac-stars/src/main/java/medac/stars/ui/chat/ChatJugadores.form
@@ -45,7 +45,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="jPanel1">
+        <Container class="javax.swing.JPanel" name="jChatJugador">
 
           <Layout>
             <DimensionLayout dim="0">
